fixed z-indexes of top menu, dropdown and subnavs

--- a/portal/static/portal/sass/partials/_images-backgrounds.scss
+++ b/portal/static/portal/sass/partials/_images-backgrounds.scss
@@ -69,7 +69,7 @@ img {
   content: url('../img/logo_c4l_hexa.png');
   position: fixed;
   top: 10px;
-  z-index: $nav-bar-level + 1;
+  z-index: $nav-bar-level + 2;
 }
 
 .glyphicon {
@@ -111,7 +111,7 @@ img {
     content: url('../img/logo_c4l_hexa.png');
     position: fixed;
     top: 10px;
-    z-index: $nav-bar-level + 1;
+    z-index: $nav-bar-level + 2;
   }
 
   .logo-horizontal {
