--- a/portal/static/portal/sass/partials/_subnavs.scss
+++ b/portal/static/portal/sass/partials/_subnavs.scss
@@ -8,7 +8,7 @@
   justify-content: center;
   text-align: center;
   width: 100%;
-  z-index: $nav-bar-level;
+  z-index: $nav-bar-level - 1;
 
   .button--regular {
     @include _margin(0px, 16px, 0px, 16px);
@@ -39,6 +39,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: $nav-bar-level - 1;
 }
 
 .sub-nav--warning {
@@ -65,6 +66,7 @@
   position: fixed;
   top: 80px;
   width: 100%;
+  z-index: $nav-bar-level - 1;
 }
 
 .sub-nav--message--fixed {
@@ -72,7 +74,7 @@
   position: fixed;
   top: 80px;
   width: 100%;
-  z-index: $nav-bar-level;
+  z-index: $nav-bar-level - 1;
 }
 
 .sub-nav--filler {
